<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_genres"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_genres" />
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_movies" />
    </group>

    <item android:title="Profile">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
